test/visibility/only/hidesCorrectFunction.good
hidesCorrectFunction.chpl:13: In function 'main':
hidesCorrectFunction.chpl:14: error: unresolved call 'foo()'
